--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,3 +16,22 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  Output-Python-Licenses:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
+      - name: Install pip-licenses
+        run: pip install pip-licenses
+      - name: Generate Licenses File
+        run: |
+          pip-licenses \
+            --from=mixed \
+            --order=license \
+            --format=markdown \
+            --output-file=pip-licenses.md \
+            --with-system
