--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Create `pip-licenses` environment
         run: |
           python -m venv pip-licenses-env
-          soure pip-licenses-env/bin/activate
+          source pip-licenses-env/bin/activate
           pip install pip-licenses
       - name: Generate Licenses File
         run: |
