--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,7 +29,7 @@ jobs:
       #     python-version: 3.10
       - name: Create `pip-licenses` environment
         run: |
-          python -m venv pip-licenses-env
+          python3 -m venv pip-licenses-env
           source pip-licenses-env/bin/activate
           pip install pip-licenses
       - name: Generate Licenses File
