Trying python -m pip-licenses

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,7 +34,7 @@ jobs:
           pip install pip-licenses
       - name: Generate Licenses File
         run: |
-          pip-licenses \
+          python3 -m pip-licenses \
             --from=mixed \
             --order=license \
             --format=markdown \
