--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           python3 -m venv pip-licenses-env
           source pip-licenses-env/bin/activate
-          pip install pip-licenses
+          python3 -m pip install pip-licenses
       - name: Generate Licenses File
         run: |
           python3 -m pip-licenses \
