--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,21 +27,22 @@ jobs:
       #   uses: actions/setup-python@v4
       #   with:
       #     python-version: 3.10
-      - name: Create `pip-licenses` environment
-        run: |
-          python3 -m venv pip-licenses-env
-          source pip-licenses-env/bin/activate
-          python3 -m pip install pip-licenses
+      # - name: Create `pip-licenses` environment
+        # run: |
+        #   python3 -m venv pip-licenses-env
+        #   source pip-licenses-env/bin/activate
+      - name: Install pip-licenses
+        run: pip install pip-licenses
       - name: Generate Licenses File
         run: |
-          python3 -m pip-licenses \
+          pip-licenses \
             --from=mixed \
             --order=license \
-            --format=markdown \
+            --format=json \
             --with-system \
-            --python=/usr/bin/python \
-            --output-file=pip-licenses.md
-          cat pip-licenses.md
+            --with-license-file \
+            --output-file=pip-licenses.json
+          cat pip-licenses.json
 
 
 
