--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,17 +12,21 @@ jobs:
   #       uses: actions/checkout@v3
   #     - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
   #     - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-  #     - name: List files in the repository
-  #       run: |
-  #         ls ${{ github.workspace }}
+      # - name: List files in the repository
+      #   run: |
+      #     ls ${{ github.workspace }}
   #     - run: echo "🍏 This job's status is ${{ job.status }}."
   Output-Python-Licenses:
     runs-on: ubuntu-latest
     steps:
       - name: Print The Environment
-        run: printenv
-      # - name: Checkout Repository
-      #   uses: actions/checkout@v3
+        run: |
+          printenv
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
       # - name: Set up Python
       #   uses: actions/setup-python@v4
       #   with:
@@ -32,7 +36,8 @@ jobs:
         #   python3 -m venv pip-licenses-env
         #   source pip-licenses-env/bin/activate
       - name: Install pip-licenses
-        run: pip install pip-licenses
+        run: |
+          pip install pip-licenses
       - name: Generate Licenses File
         run: |
           pip-licenses \
@@ -40,7 +45,6 @@ jobs:
             --order=license \
             --format=markdown \
             --with-system \
-            --with-license-file \
             --output-file=pip-licenses.md
           cat pip-licenses.md
 
