Add requirements file and --summary

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -45,6 +45,7 @@ jobs:
             --order=license \
             --format=markdown \
             --with-system \
+            --summary \
             --output-file=pip-licenses.md
           cat pip-licenses.md
 
