--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,30 +34,36 @@ jobs:
       #   uses: actions/setup-python@v4
       #   with:
       #     python-version: 3.10
-      # - name: Create `pip-licenses` environment
-        # run: |
-        #   python3 -m venv pip-licenses-env
-        #   source pip-licenses-env/bin/activate
+      - name: List pips
+        run: |
+          pip list -v
+      - name: Create `pip-licenses` environment
+        run: |
+          python3 -m venv pip-licenses-env
+          source pip-licenses-env/bin/activate
       - name: Install pip-licenses
         run: |
           pip install pip-licenses
-      - name: Generate Licenses File
+      - name: List pips
         run: |
-          license_file=pip-licenses.md &&
-            echo -e "# ${{ github.repository }} Licenses\n" &&
-            pip-licenses \
-            --from=mixed \
-            --order=license \
-            --format=markdown \
-            >>$license_file &&
-            echo -e "\n## Summary\n" &&
-            pip-licenses \
-            --from=mixed \
-            --order=license \
-            --format=markdown \
-            --summary \
-            >>$license_file &&
-            cat $license_file
+          pip list -v
+      # - name: Generate Licenses File
+#         run: |
+#           license_file=pip-licenses.md &&
+#             echo -e "# ${{ github.repository }} Licenses\n" &&
+#             pip-licenses \
+#             --from=mixed \
+#             --order=license \
+#             --format=markdown \
+#             >>$license_file &&
+#             echo -e "\n## Summary\n" &&
+#             pip-licenses \
+#             --from=mixed \
+#             --order=license \
+#             --format=markdown \
+#             --summary \
+#             >>$license_file &&
+#             cat $license_file
 
 
 
