--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -36,7 +36,8 @@ jobs:
       #     python-version: 3.10
       - name: List pips
         run: |
-          pip list -v
+          pip list -v |
+            grep site-packages
       - name: Create `pip-licenses` environment
         run: |
           python3 -m venv pip-licenses-env
@@ -46,7 +47,8 @@ jobs:
           pip install pip-licenses
       - name: List pips
         run: |
-          pip list -v
+          pip list -v |
+            grep site-packages
       # - name: Generate Licenses File
 #         run: |
 #           license_file=pip-licenses.md &&
