--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -1,6 +1,6 @@
 name: Get pip Licenses
 run-name: ${{ github.actor }} is getting pip licenses
-on: [push]
+on: [pull_request]
 jobs:
   Output-Python-Licenses:
     runs-on: ubuntu-latest
@@ -16,3 +16,24 @@ jobs:
           echo "LICENSE_FILE=${LICENSE_FILE}" >>"$GITHUB_ENV"
       - name: Run pip-licenses.sh
         run: /bin/bash ./pip-licenses.sh "${{ env.LICENSE_FILE }}"
+      # - name: Update
+      #   run: |
+      #     git config --global user.name "github-actions[bot]"
+      #     git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+      #     git add "${{ env.LICENSE_FILE }}"
+      #     git commit -m "Update license file"
+      #     git push
+      - name: Amend Pull Request
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const fs = require('fs');
+            const filePath = "${{ env.LICENSE_FILE }}"
+            const content = fs.readFileSync(filePath, 'utf8');
+
+            github.pulls.update({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number,
+              body: context.payload.pull_request.body + content
+            })
