Inspect github object

--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -26,17 +26,15 @@ jobs:
       - name: Amend Pull Request
         uses: actions/github-script@v6
         with:
-          script: |
-            const fs = require('fs');
-            const filePath = "${{ env.LICENSE_FILE }}"
-            const content = fs.readFileSync(filePath, 'utf8');
-
-            console.log(context)
-            console.log(github.pulls)
-
+          # const fs = require('fs');
+          # const filePath = "${{ env.LICENSE_FILE }}"
+          # const content = fs.readFileSync(filePath, 'utf8');
           # github.pulls.update({
           #   owner: context.repo.owner,
           #   repo: context.repo.repo,
           #   pull_number: context.payload.pull_request.number,
           #   body: context.payload.pull_request.body + content
           # })
+          # console.log(context)
+          script: |
+            console.log(github)
