--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -16,27 +16,28 @@ jobs:
       #     echo "LICENSE_FILE=${LICENSE_FILE}" >>"$GITHUB_ENV"
       # - name: Run pip-licenses.sh
       #   run: /bin/bash ./pip-licenses.sh "${{ env.LICENSE_FILE }}"
-      # - name: Update
+      # - name: Update PR With File
       #   run: |
+      #     echo "somefile" >somefile
       #     git config --global user.name "github-actions[bot]"
       #     git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      #     git add "${{ env.LICENSE_FILE }}"
-      #     git commit -m "Update license file"
+      #     git add somefile
+      #     git commit -m "Update some file"
       #     git push
       - name: Amend Pull Request
         uses: actions/github-script@v6
+        # const fs = require('fs');
+        # const filePath = "${{ env.LICENSE_FILE }}"
+        # const content = fs.readFileSync(filePath, 'utf8');
+        # console.log(context)
+        # console.log(github)
+        # console.log(context.payload.pull_request)
         with:
-          # const fs = require('fs');
-          # const filePath = "${{ env.LICENSE_FILE }}"
-          # const content = fs.readFileSync(filePath, 'utf8');
-          # console.log(context)
-          # console.log(github)
-          # const content = 'some content'
-          # github.rest.pulls.update({
-          #   owner: context.repo.owner,
-          #   repo: context.repo.repo,
-          #   pull_number: context.payload.pull_request.number,
-          #   body: context.payload.pull_request.body + content
-          # })
           script: |
-            console.log(context.payload.pull_request)
+            const content = 'some content'
+            github.rest.pulls.update({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number,
+              body: context.payload.pull_request.body + content
+            })
