--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -9,35 +9,18 @@ jobs:
         run: printenv
       - name: Checkout Repository
         uses: actions/checkout@v3
-      # - name: Generate Output Filename
-      #   shell: bash
-      #   run: |
-      #     LICENSE_FILE=$(basename ${GITHUB_REPOSITORY})-pip-licenses.md
-      #     echo "LICENSE_FILE=${LICENSE_FILE}" >>"$GITHUB_ENV"
-      # - name: Run pip-licenses.sh
-      #   run: /bin/bash ./pip-licenses.sh "${{ env.LICENSE_FILE }}"
-      - name: Update PR With File
+      - name: Generate Output Filename
+        shell: bash
         run: |
-          echo "somefile" >somefile
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add somefile
-          git commit -m "Update some file"
-          git push origin "${GITHUB_HEAD_REF}"
-      # - name: Amend Pull Request
-      #   uses: actions/github-script@v6
-      # const fs = require('fs');
-      # const filePath = "${{ env.LICENSE_FILE }}"
-      # const content = fs.readFileSync(filePath, 'utf8');
-      # console.log(context)
-      # console.log(github)
-      # console.log(context.payload.pull_request)
-      # with:
-      #   script: |
-      #     const content = 'some content'
-      #     github.rest.pulls.update({
-      #       owner: context.repo.owner,
-      #       repo: context.repo.repo,
-      #       pull_number: context.payload.pull_request.number,
-      #       body: context.payload.pull_request.body + content
-      #     })
+          LICENSE_FILE=$(basename ${GITHUB_REPOSITORY})-pip-licenses.md
+          echo "LICENSE_FILE=${LICENSE_FILE}" >>"$GITHUB_ENV"
+      - name: Generate License File
+        run: /bin/bash ./pip-licenses.sh "${{ env.LICENSE_FILE }}"
+      - name: Update Pull Request With File
+        run: |
+          git config --global user.email "no-reply@github.com"
+          git config --global user.name "GitHub Actions"
+          git add "${{ env.LICENSE_FILE }}"
+          git commit -m "Update license file"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git push
