--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -5,7 +5,7 @@ env:
 on:
   pull_request:
     branches-ignore:
-      - '${{ env.BRANCH_CREATED_HERE }}'
+      - 'license-file'
 
 jobs:
   Output-Python-Licenses:
