Permissions: repository-projects write

--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -8,7 +8,7 @@ permissions:
   issues: none
   packages: write
   pull-requests: none
-  repository-projects: none
+  repository-projects: write
   security-events: none
   statuses: none
 
