Permissions: actions checks write

--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -1,8 +1,8 @@
 name: Get pip Licenses
 run-name: ${{ github.actor }} is getting pip licenses
 permissions:
-  actions: none
-  checks: none
+  actions: write
+  checks: write
   contents: write
   deployments: none
   issues: none
