Add git pull --rebase

--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -50,6 +50,7 @@ jobs:
           git config --global user.name "GitHub Actions"
 
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          git pull --rebase
           git checkout -b ${BRANCH_CREATED_HERE}
 
           git add ${LICENSE_FILE}
