--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -1,16 +1,5 @@
 name: Get pip Licenses
 run-name: ${{ github.actor }} is getting pip licenses
-permissions:
-  actions: write
-  checks: write
-  contents: write
-  deployments: none
-  issues: none
-  packages: write
-  pull-requests: none
-  repository-projects: write
-  security-events: write
-  statuses: none
 
 env:
   BRANCH_CREATED_HERE: license-file
@@ -21,6 +10,9 @@ on:
 
 jobs:
   Output-Python-Licenses:
+    # Permission needed for committing license file
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Print The Environment
@@ -28,6 +20,8 @@ jobs:
 
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Generate License File Name
         run: |
@@ -44,21 +38,27 @@ jobs:
         env:
           LICENSE_FILE: ${{ env.LICENSE_FILE }}
 
-      - name: Update Pull Request With File
-        run: |
-          git config --global user.email no-reply@github.com
-          git config --global user.name "GitHub Actions"
-
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
-          git pull --rebase origin ${BRANCH_CREATED_HERE}
-          temp_filename=${LICENSE_FILE}-${RANDOM}
-          mv ${LICENSE_FILE} ${temp_filename}
-          git checkout -b ${BRANCH_CREATED_HERE}
-          mv ${temp_filename} ${LICENSE_FILE}
-
-          git add ${LICENSE_FILE}
-          git commit -m "Update license file"
-          git push origin ${BRANCH_CREATED_HERE}
-
-        env:
-          LICENSE_FILE: ${{ env.LICENSE_FILE }}
+      - name: Commit License File
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Test 3P action
+          branch: ${{ env.BRANCH_CREATED_HERE }}
+          create_branch: true
+#       - name: Update Pull Request With File
+#         run: |
+#           git config --global user.email no-reply@github.com
+#           git config --global user.name "GitHub Actions"
+#
+#           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}/
+#           git pull --rebase origin ${BRANCH_CREATED_HERE}
+#           temp_filename=${LICENSE_FILE}-${RANDOM}
+#           mv ${LICENSE_FILE} ${temp_filename}
+#           git checkout -b ${BRANCH_CREATED_HERE}
+#           mv ${temp_filename} ${LICENSE_FILE}
+#
+#           git add ${LICENSE_FILE}
+#           git commit -m "Update license file"
+#           git push origin ${BRANCH_CREATED_HERE}
+#
+#         env:
+#           LICENSE_FILE: ${{ env.LICENSE_FILE }}
