Change git pull command

--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Pull Repository
         run: |
-          git pull --rebase origin ${BRANCH_CREATED_HERE}
+          git pull --rebase
 
       - name: Commit License File
         uses: stefanzweifel/git-auto-commit-action@v4
