--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Commit License File
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Test 3P action
+          commit_message: Test with existing branch
           branch: ${{ env.BRANCH_CREATED_HERE }}
           create_branch: true
           file_pattern: ${{ env.LICENSE_FILE }}
