--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -47,35 +47,34 @@ jobs:
           LICENSE_FILE=$(basename ${GITHUB_REPOSITORY})-pip-licenses.md
           echo "LICENSE_FILE=${LICENSE_FILE}" >>${GITHUB_ENV}
 
-      - name: Dummy License File
-        run: |
-          echo -e "\nDummy content $(date +%FT%T%z)\n" >${LICENSE_FILE}
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          add-paths: ${{ env.LICENSE_FILE }}
-          labels: |
-            automated pr
+      #       - name: Dummy License File
+      #         run: |
+      #           echo -e "\nDummy content $(date +%FT%T%z)\n" >${LICENSE_FILE}
+      #
+      #       - name: Create Pull Request
+      #         uses: peter-evans/create-pull-request@v5
+      #         with:
+      #           token: ${{ secrets.GITHUB_TOKEN }}
+      #           add-paths: ${{ env.LICENSE_FILE }}
+      #           labels: |
+      #             automated pr
 
       # - name: Run License File Script
       #   run: ./pip-licenses.sh "${LICENSE_FILE}"
       #   env:
       #     LICENSE_FILE: ${{ env.LICENSE_FILE }}
 
-#       - name: Update Pull Request With File
-#         run: |
-#           git config --global user.email no-reply@github.com
-#           git config --global user.name "GitHub Actions"
-#
-#           git pull --verbose
-#
-#           git checkout --progress ${GITHUB_HEAD_REF}
-#           echo -e "\nDummy content $(date +%FT%T%z)\n" >${LICENSE_FILE}
-#           cat ${LICENSE_FILE}
-#
-#           git add --verbose ${LICENSE_FILE}
-#           git commit --verbose --message="Update license file"
-#           git push --verbose --force origin ${BRANCH_CREATED_HERE}
-#
+      - name: Update Pull Request With File
+        run: |
+          git config --global user.email no-reply@github.com
+          git config --global user.name "GitHub Actions"
+
+          git pull --verbose
+
+          git checkout --progress ${GITHUB_HEAD_REF}
+          echo -e "\nDummy content $(date +%FT%T%z)\n" >${LICENSE_FILE}
+          cat ${LICENSE_FILE}
+
+          git add --verbose ${LICENSE_FILE}
+          git commit --verbose --message="Update license file"
+          git push --verbose --force origin ${GITHUB_HEAD_REF}
