--- a/.github/workflows/list-languages.yml
+++ b/.github/workflows/list-languages.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            repos.listLanguages({
+            github.rest.repos.listLanguages({
               owner: context.repo.owner,
               repo: context.repo.repo,
             });
